force-app/main/default/objects/Release__c.object
<CustomObject>
    <description>Individual release events for a given Project</description>
    <fields>
        <fullName>Created_from_Template__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, release was created from a template.</description>
        <inlineHelpText>If checked, release was created from a template.</inlineHelpText>
        <label>Created from Template?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Brief description of the purpose or scope of the release.</description>
        <inlineHelpText>Brief description of the purpose or scope of the release.</inlineHelpText>
        <label>Description</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Is_Backlog__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, this release is being used as a backlog and not for actual development.</description>
        <inlineHelpText>If checked, this release is being used as a backlog and not for actual development.</inlineHelpText>
        <label>Is Backlog?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <description>Draft your detailed release notes here.</description>
        <inlineHelpText>Draft your detailed release notes here.</inlineHelpText>
        <label>Release Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Points_Available__c</fullName>
        <description>Points remaining/free in the Points Goal (Points Goal - Total Points).</description>
        <formula>Points_Goal__c - Total_Points__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Points remaining/free in the Points Goal (Points Goal - Total Points).</inlineHelpText>
        <label>Points Available</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Points_Goal__c</fullName>
        <description>Maximum number of points planned for the release.</description>
        <inlineHelpText>Maximum number of points planned for the release.</inlineHelpText>
        <label>Points Goal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Points_Left_to_Complete__c</fullName>
        <description>Total points NOT Ready or Deployed (includes stories in Blocked, Defined, Building, and Testing statuses).</description>
        <inlineHelpText>Total points NOT Ready or Deployed (includes stories in Blocked, Defined, Building, and Testing statuses).</inlineHelpText>
        <label>Points Left to Complete</label>
        <summarizedField>Story__c.Points__c</summarizedField>
        <summaryFilterItems>
            <field>Story__c.Status__c</field>
            <operation>equals</operation>
            <value>Blocked, Defined, Building, Testing</value>
        </summaryFilterItems>
        <summaryForeignKey>Story__c.Release__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Releases</relationshipLabel>
        <relationshipName>Releases</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Release_Date__c</fullName>
        <label>Release Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Release_Mode__c</fullName>
        <defaultValue>&quot;Standard&quot;</defaultValue>
        <description>Setting that controls the features and layout enabled for this release and its related stories.  Default is Standard (all Imhotep features enabled).  Individual releases and stories can override this selection.  Changing this field or the record type will convert this release and its related stories (field data will not be lost but it may be hidden on the page).</description>
        <inlineHelpText>Setting that controls the features and layout enabled for this release and its related stories.  Default is Standard (all Imhotep features enabled).  Individual releases and stories can override this selection.  Changing this field or the record type will convert this release and its related stories (field data will not be lost but it may be hidden on the page).</inlineHelpText>
        <label>Release Mode</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Release_Mode</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Planning</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Accepted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Points__c</fullName>
        <label>Total Points</label>
        <summarizedField>Story__c.Points__c</summarizedField>
        <summaryForeignKey>Story__c.Release__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Release</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Start_Date__c</columns>
        <columns>Release_Date__c</columns>
        <columns>Project__c</columns>
        <columns>Description__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Backlogs</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Start_Date__c</columns>
        <columns>Release_Date__c</columns>
        <columns>Project__c</columns>
        <columns>Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Is_Backlog__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Backlogs</label>
    </listViews>
    <listViews>
        <fullName>All_Releases_Accepted</fullName>
        <columns>NAME</columns>
        <columns>Start_Date__c</columns>
        <columns>Release_Date__c</columns>
        <columns>Project__c</columns>
        <columns>Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Accepted</value>
        </filters>
        <filters>
            <field>Is_Backlog__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Releases (Accepted)</label>
    </listViews>
    <listViews>
        <fullName>All_Releases_Active</fullName>
        <columns>NAME</columns>
        <columns>Start_Date__c</columns>
        <columns>Release_Date__c</columns>
        <columns>Project__c</columns>
        <columns>Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <filters>
            <field>Is_Backlog__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Releases (Active)</label>
    </listViews>
    <listViews>
        <fullName>All_Releases_Planning</fullName>
        <columns>NAME</columns>
        <columns>Start_Date__c</columns>
        <columns>Release_Date__c</columns>
        <columns>Project__c</columns>
        <columns>Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Planning</value>
        </filters>
        <filters>
            <field>Is_Backlog__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Releases (Planning)</label>
    </listViews>
    <nameField>
        <label>Release</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Releases</pluralLabel>
    <recordTypes>
        <fullName>Simple</fullName>
        <active>true</active>
        <description>Use for projects that don&apos;t use advanced features (e.g. points, test scenarios, tracking metadata changes).</description>
        <label>Simple Release</label>
    </recordTypes>
    <recordTypes>
        <fullName>Standard</fullName>
        <active>true</active>
        <description>Use for projects that need access to all Imhotep features.  Default record type.</description>
        <label>Standard Release</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>